--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <title>Impressp Espresso</title>
+    <title>Impresso Espresso</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
